objects/SDOC__SDRelationship__c.object
<CustomObject   >
    <fields>
        <fullName>SDOC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Created__c</fullName>
        <formula>SDOC__SDoc__r.CreatedBy.FirstName +&apos; &apos; + SDOC__SDoc__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Comment__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Comment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Created_On__c</fullName>
        <formula>SDOC__SDoc__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Name__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Status__c</fullName>
        <formula>TEXT(SDOC__SDoc__r.SDOC__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Type__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Document_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Edit_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Edit_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Email_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_GD_Link__c</fullName>
        <label>Doc Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_GD_Status__c</fullName>
        <label>Doc Link Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Linked</fullName>
                </value>
                <value>
                    <fullName>Linked to Google Doc</fullName>
                </value>
                <value>
                    <fullName>Linked to Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Mailed</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Pending Client Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected by Client</fullName>
                </value>
                <value>
                    <fullName>Signed Pending Processing</fullName>
                </value>
                <value>
                    <fullName>Signed Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__SDoc__c</fullName>
        <label>SDoc</label>
        <referenceTo>SDOC__SDoc__c</referenceTo>
        <relationshipLabel>SDoc</relationshipLabel>
        <relationshipName>SDoc</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SDOC__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Upload__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Upload__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__View_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__View_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
</CustomObject>